<resources>
    <string name="app_name">CCM2YugiohProject</string>
    <string name="bt_GLogin_text">Log in with Google</string>
    <string name="ET_Name_Text">Name</string>
    <string name="ET_Password_Text">Password</string>
    <string name="bt_login_text">Log in</string>
    <string name="bt_to_sign_up">Sign up here</string>
    <string name="ET_username_text">username</string>
    <string name="bt_sign_up">Sign up !</string>
    <string name="bt_to_sign_in">Return to Sign in</string>
    <string name="ET_username">username</string>
    <string name="tv_name_deck">undefined</string>
    <string name="tv_desc_deck">undefined</string>
    <string name="bt_Modify_deck">Modify</string>
    <string name="bt_toListDeck">Decks list</string>
    <string name="bt_quit">Exit</string>
    <string name="title_menu_home">Menu</string>
    <string name="bt_return">Return</string>
    <string name="title_listDeck">Decks list</string>
    <string name="title_form_createDeck">Form Create Deck</string>
    <string name="bt_addDeck">Add this Deck</string>
    <string name="title_profile">Profile Settings</string>
    <string name="bt_profile">Profile</string>
    <string name="bt_start_duel">It\'s time to Duel !</string>
    <string name="tv_deck">Your deck</string>
    <string name="tv_choix_ia">Choice IA</string>
    <string name="et_ia_deck">IA deck</string>
    <string name="et_choix_lifepoint">start lifepoint</string>
    <string name="tv_nom_carte">name</string>
    <string name="tv_niv_carte">level</string>
    <string name="tv_image_carte">image</string>
    <string name="tv_atk_carte">atk</string>
    <string name="tv_def_carte">def</string>
    <string name="tv_duplicat_carte">duplicat</string>
    <string name="tv_del">delete</string>
    <string name="tv_add">add</string>
    <string name="bt_drawPhase">DP</string>
    <string name="bt_mainPhase">MP</string>
    <string name="bt_mainPhase2">MP2</string>
    <string name="bt_battlePhase">BP</string>
    <string name="bt_standbyPhase">SP</string>
    <string name="bt_endPhase">EP</string>
    <string name="nav_home">Home</string>
    <string name="nav_party">Duel</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_deck">Decks</string>
    <string name="title_deckbuilder">Deck Builder</string>
    <string name="title_conf_duel">duel settings</string>
    <string name="et_new_password">new password</string>
    <string name="et_pseudo">username</string>
    <string name="alert_Supp_yes">Yes</string>
    <string name="alert_Supp_no">No</string>
    <string name="alert_Supp_message">Are you sure to delete this deck ?</string>
    <string name="titile_login">Login</string>
    <string name="title_signup">sign up</string>
    <string name="labelVictory">Victory</string>
    <string name="labelDefeat">Defeat</string>
    <string name="bt_invocation">invocation</string>
    <string name="bt_poser">poser</string>
    <string name="bt_activer">Activer</string>
    <string name="bt_changer_position">changer position</string>
    <string name="bt_attaquer">Attaquer</string>
    <string name="sort">sort</string>
    <string name="home_victory">Win</string>
    <string name="home_loss">Loss</string>
</resources>
