<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_menu_home"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textCursorDrawable="@android:drawable/status_bar_item_background"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_toListDeck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickToDeckList"
        android:text="@string/bt_toListDeck" />

    <Button
        android:id="@+id/bt_duel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickDuel"
        android:text="@string/bt_start_duel" />

    <Button
        android:id="@+id/bt_profile_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickProfile_menu"
        android:text="@string/bt_profile" />

    <Button
        android:id="@+id/bt_quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickQuit"
        android:text="@string/bt_quit" />
</LinearLayout>
