<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_profile"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_pseudo_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
        android:ems="10"
        android:hint="@string/et_pseudo"
        android:inputType="textPersonName"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHighlight="@color/design_default_color_primary"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textColorLink="@color/design_default_color_primary"
        android:textCursorDrawable="@android:drawable/status_bar_item_background" />

    <EditText
        android:id="@+id/et_password_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
        android:ems="10"
        android:hint="@string/et_new_password"
        android:inputType="textPassword"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHighlight="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textColorLink="@color/common_google_signin_btn_text_dark_focused"
        android:textCursorDrawable="@android:drawable/status_bar_item_background" />

    <EditText
        android:id="@+id/et_password_verif_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:foregroundTint="@color/common_google_signin_btn_text_dark_default"
        android:hint="@string/et_new_password"
        android:inputType="textPassword"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHighlight="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textColorLink="@color/common_google_signin_btn_text_dark_focused"
        android:textCursorDrawable="@android:drawable/status_bar_item_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_retour_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickRetourProfile"
            android:text="@string/bt_return" />

        <Button
            android:id="@+id/bt_Modifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickModifyProfile"
            android:text="@string/bt_Modify_deck" />
    </LinearLayout>
</LinearLayout>
